--- a/UMLGenerator/pom.xml
+++ b/UMLGenerator/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sjsu.project</groupId>
+	<groupId>com.sjsu.rashmi</groupId>
 	<artifactId>umlgenerator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>UMLGenerator</name>
@@ -19,5 +19,52 @@
 			<artifactId>plantuml</artifactId>
 			<version>8050</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.3</version>
+		</dependency>
+
+
 	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+
+		
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+					 <archive>
+                           <manifest>
+                                 <mainClass>com.sjsu.umlgenerator.UMLParser</mainClass>
+                           </manifest>
+                       </archive>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
