--- a/UMLGenerator/pom.xml
+++ b/UMLGenerator/pom.xml
@@ -26,6 +26,13 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+
 
 
 	</dependencies>
@@ -33,7 +40,7 @@
 		<pluginManagement>
 			<plugins>
 
-		
+
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<executions>
@@ -45,11 +52,11 @@
 						</execution>
 					</executions>
 					<configuration>
-					 <archive>
-                           <manifest>
-                                 <mainClass>com.sjsu.umlgenerator.UMLParser</mainClass>
-                           </manifest>
-                       </archive>
+						<archive>
+							<manifest>
+								<mainClass>com.sjsu.umlgenerator.UMLParser</mainClass>
+							</manifest>
+						</archive>
 						<descriptorRefs>
 							<descriptorRef>jar-with-dependencies</descriptorRef>
 						</descriptorRefs>
