--- a/UMLGenerator/pom.xml
+++ b/UMLGenerator/pom.xml
@@ -33,7 +33,11 @@
 			<version>4.11</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.6.5</version>
+		</dependency>
 
 	</dependencies>
 	<build>
